# add-mcp-server

./: pyproject.toml
src/tool/: add_tool.py  main.py
